@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - now Dice and Jaccard are correct
 
 0.014  2014-10-10 10:17:16 CEST
        - improved test coverage
